# zynk

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/: release.yml
.github/workflows/: module-separation.yml  publish.yml
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/scripts/: bundle_cli.py
bindings/python/tests/: __init__.py  test_camel_snake_conversion.py  test_cli_bundling.py  test_dump_schema_json.py  test_python_codegen_cutover.py  test_registry.py  test_upload.py  test_websocket.py
bindings/python/tests/fixtures/: roundtrip_schema_fixture.py
bindings/python/zynk/: __init__.py  _cli.py  bridge.py  channel.py  errors.py  registry.py  runner.py  server.py  static.py  websocket.py
bindings/python/zynk/core/: registry.py  schema_json.py  types.py
bindings/python/zynk/decorators/: __init__.py  message.py  static.py
bindings/python/zynk/runtime/: coerce.py  dispatch.py
crates/zynk-axum/: Cargo.toml  README.md
crates/zynk-axum/examples/: channel_smoke.rs  command_smoke.rs  upload_static_smoke.rs
crates/zynk-axum/src/: lib.rs
crates/zynk-axum/tests/: channel_routes.rs  command_routes.rs  introspection_routes.rs  static_routes.rs  upload_routes.rs  websocket_routes.rs
crates/zynk-cli/: Cargo.toml  README.md
crates/zynk-cli/src/: main.rs
crates/zynk-cli/tests/: dev.rs  gen.rs  schema.rs
crates/zynk-codegen/: Cargo.toml  README.md
crates/zynk-codegen/src/: lib.rs
crates/zynk-gen-effect/: Cargo.toml  README.md
crates/zynk-gen-effect/src/: lib.rs  lowering.rs  options.rs  printer.rs  runtime.rs  topological.rs  types.rs
crates/zynk-gen-effect/src/runtime/: _effect_internal.ts
crates/zynk-gen-effect/tests/: kitchen_sink_golden.rs
crates/zynk-gen-ts/: Cargo.toml  README.md
crates/zynk-gen-ts/src/: lib.rs  lowering.rs  naming.rs  printer.rs  runtime.rs
crates/zynk-gen-ts/src/runtime/: _internal.ts
crates/zynk-gen-ts/tests/: kitchen_sink_golden.rs
crates/zynk-gen-ts/tests/fixtures/: kitchen_sink_schema.json
crates/zynk-macros/: Cargo.toml  README.md
crates/zynk-macros/src/: lib.rs
crates/zynk-macros/tests/: expand.rs  metadata.rs
crates/zynk-macros/tests/expand/: command_rejects_self.rs  command_rejects_self.stderr  command_success.rs  message_success.rs  static_bad_return.rs  static_bad_return.stderr  static_result_return.rs  static_result_return.stderr  static_success.rs  upload_missing_file.rs  upload_missing_file.stderr  upload_multiple_files.rs  upload_multiple_files.stderr  upload_success.rs  upload_sync_fn.rs  upload_sync_fn.stderr
crates/zynk-runtime/: Cargo.toml  README.md
crates/zynk-runtime/src/: lib.rs
crates/zynk-schema/: Cargo.toml  README.md
crates/zynk-schema/src/: endpoint.rs  graph.rs  lib.rs  naming.rs  types.rs
crates/zynk-schema/tests/: python_roundtrip.rs
examples/effect-connector/backend/: commands.py  generate.py  main.py
examples/effect-connector/frontend/src/: _effect_internal.ts  api.ts  app.ts
examples/kitchen-sink/: README.md
examples/kitchen-sink/backend/: chat.py  generate_ts.py  main.py  requirements.txt  tasks.py  uploads.py  users.py  weather.py
examples/kitchen-sink/frontend/: index.html  package.json
examples/kitchen-sink/frontend/src/: App.tsx  wire-fidelity-types.ts
examples/kitchen-sink/frontend/src/generated-effect/: _effect_internal.ts  api.ts
examples/kitchen-sink/harness/: .gitignore  README.md  effect.ts  index.test.ts  index.ts  package.json  tsconfig.json
examples/rust-axum-kitchen-sink/: Cargo.toml
examples/rust-axum-kitchen-sink/src/: lib.rs  main.rs
examples/rust-axum-kitchen-sink/static_assets/: sample.txt
examples/rust-axum-kitchen-sink/tests/: smoke.rs
scripts/: audit_module_separation.sh
tests/: test_camel_snake_conversion.py  test_effect_generator.py  test_effect_promise_surface.py  test_effect_typecheck.py  test_generator.py  test_registry.py  test_upload.py
zynk/: __init__.py  bridge.py  channel.py  errors.py  generator.py  registry.py  runner.py  server.py  upload.py  websocket.py
zynk/codegen/: __init__.py  base.py  registry.py
zynk/core/: __init__.py  ir.py  naming.py  registry.py  types.py
zynk/decorators/: _build.py  command.py  upload.py
zynk/generators/: __init__.py
zynk/generators/effect/: __init__.py  lower.py  options.py  runtime.py  types.py
zynk/generators/typescript/: __init__.py  legacy.py  lower.py  printer.py  ts_ast.py
zynk/runtime/: __init__.py  coerce.py
