[workspace]
members = [
    "crates/zynk-schema",
    "crates/zynk-codegen",
    "crates/zynk-gen-ts",
    "crates/zynk-gen-effect",
    "crates/zynk-cli",
    "crates/zynk-runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/SethBurkart123/zynk"
authors = ["SethBurkart123"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
