[workspace]
members = [
    "crates/zynk-schema",
    "crates/zynk-codegen",
    "crates/zynk-gen-ts",
    "crates/zynk-gen-effect",
    "crates/zynk-cli",
    "crates/zynk-runtime",
    "crates/zynk-macros",
    "crates/zynk-axum",
    "examples/rust-axum-kitchen-sink",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/SethBurkart123/zynk"
homepage = "https://github.com/SethBurkart123/zynk"
documentation = "https://docs.rs/zynk-schema"
authors = ["SethBurkart123"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
