[package]
name = "zynk-axum"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Axum server binding for Zynk Rust endpoints"
keywords = ["zynk", "axum", "rpc", "server"]
categories = ["web-programming::http-server"]

[dependencies]
zynk-runtime = { version = "0.1.0", path = "../zynk-runtime" }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
futures = "0.3"
bytes = "1"
serde_json = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
