[package]
name = "zynk-axum"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zynk-axum"
authors.workspace = true
description = "Axum server binding for Zynk Rust endpoints"
readme = "README.md"
keywords = ["zynk", "axum", "rpc", "server"]
categories = ["web-programming::http-server"]

[dependencies]
zynk-runtime = { version = "0.1.2", path = "../zynk-runtime" }
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
tower = "0.5"
futures = "0.3"
bytes = "1"
serde_json = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
