[package]
name = "zynk-cli"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zynk-cli"
authors.workspace = true
description = "Command-line interface for generating Zynk TypeScript clients"
readme = "README.md"
keywords = ["zynk", "typescript", "codegen", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "zynk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
notify = "8"
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt", "signal", "time"] }
zynk-codegen = { version = "0.1.3", path = "../zynk-codegen" }
zynk-gen-effect = { version = "0.1.3", path = "../zynk-gen-effect" }
zynk-gen-ts = { version = "0.1.3", path = "../zynk-gen-ts" }
zynk-schema = { version = "0.1.3", path = "../zynk-schema" }
