[package]
name = "zynk-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure in-memory generator interfaces for Zynk code generation"

[dependencies]
zynk-schema = { path = "../zynk-schema" }
serde.workspace = true
serde_json.workspace = true
