[package]
name = "zynk-codegen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zynk-codegen"
authors.workspace = true
description = "Pure in-memory generator interfaces for Zynk code generation"
readme = "README.md"
keywords = ["zynk", "codegen", "generator", "typescript"]
categories = ["development-tools", "template-engine"]

[dependencies]
zynk-schema = { version = "0.1.0", path = "../zynk-schema" }
serde.workspace = true
serde_json.workspace = true
