[package]
name = "zynk-gen-effect"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Effect-TS generator for Zynk API graphs"

[dependencies]
zynk-schema = { path = "../zynk-schema" }
zynk-codegen = { path = "../zynk-codegen" }
