[package]
name = "zynk-gen-effect"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zynk-gen-effect"
authors.workspace = true
description = "Effect-TS generator for Zynk API graphs"
readme = "README.md"
keywords = ["zynk", "effect", "typescript", "codegen"]
categories = ["development-tools", "web-programming"]

[dependencies]
zynk-schema = { version = "0.1.3", path = "../zynk-schema" }
zynk-codegen = { version = "0.1.3", path = "../zynk-codegen" }
serde_json.workspace = true
