[package]
name = "zynk-gen-ts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Plain TypeScript generator for Zynk API graphs"

[dependencies]
zynk-schema = { path = "../zynk-schema" }
zynk-codegen = { path = "../zynk-codegen" }

[dev-dependencies]
serde_json.workspace = true
