[package]
name = "zynk-gen-ts"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zynk-gen-ts"
authors.workspace = true
description = "Plain TypeScript generator for Zynk API graphs"
readme = "README.md"
keywords = ["zynk", "typescript", "codegen", "generator"]
categories = ["development-tools", "web-programming"]

[dependencies]
zynk-schema = { version = "0.1.2", path = "../zynk-schema" }
zynk-codegen = { version = "0.1.2", path = "../zynk-codegen" }

[dev-dependencies]
serde_json.workspace = true
