[package]
name = "zynk-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Proc macros for registering Zynk Rust endpoints"
keywords = ["zynk", "macros", "rpc", "websocket"]
categories = ["web-programming"]

[lib]
proc-macro = true

[dependencies]
zynk-runtime = { version = "0.1.0", path = "../zynk-runtime" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"
