[package]
name = "zynk-macros"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zynk-macros"
authors.workspace = true
description = "Proc macros for registering Zynk Rust endpoints"
readme = "README.md"
keywords = ["zynk", "macros", "rpc", "websocket"]
categories = ["web-programming"]

[lib]
proc-macro = true

[dependencies]
zynk-runtime = { version = "0.1.3", path = "../zynk-runtime" }
zynk-schema = { version = "0.1.3", path = "../zynk-schema" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"
