[package]
name = "zynk-runtime"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zynk-runtime"
authors.workspace = true
description = "Pure wire-contract runtime types for Zynk server bindings"
readme = "README.md"
keywords = ["zynk", "runtime", "rpc", "wire"]
categories = ["web-programming"]

[dependencies]
zynk-schema = { version = "0.1.1", path = "../zynk-schema" }
serde.workspace = true
serde_json.workspace = true
inventory = "0.3"
thiserror = "2"
