[package]
name = "zynk-runtime"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zynk-runtime"
authors.workspace = true
description = "Pure wire-contract runtime types for Zynk server bindings"
readme = "README.md"
keywords = ["zynk", "runtime", "rpc", "wire"]
categories = ["web-programming"]

[dependencies]
zynk-schema = { version = "0.1.3", path = "../zynk-schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
inventory = "0.3"
thiserror = "2"
