[package]
name = "zynk-schema"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zynk-schema"
authors.workspace = true
description = "Canonical in-memory schema representation for Zynk bindings and generators"
readme = "README.md"
keywords = ["zynk", "schema", "serde", "codegen"]
categories = ["development-tools", "data-structures"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
