[package]
name = "zynk-schema"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zynk-schema"
authors.workspace = true
description = "Canonical in-memory schema representation for Zynk bindings and generators"
readme = "README.md"
keywords = ["zynk", "schema", "serde", "codegen"]
categories = ["development-tools", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
